# CRC-Prediction

./: .gitignore  main.py  pyproject.toml
notebooks/: dataset_download.py
